style(desmos): fix semicolons and spacing

--- a/styles/desmos/catppuccin.user.less
+++ b/styles/desmos/catppuccin.user.less
@@ -1193,19 +1193,19 @@
     /* Professional page (desmos.com/professional) */
     .dcg-professional-hero {
       background-color:@crust;
-      color:@text;
+      color: @text;
     }
 
     .dcg-section__beta-button {
-      color:@base;
-      background-color:@text
+      color: @base;
+      background-color: @text;
 
       &.dcg-hovered {
-	      background-color:@subtext1
+	      background-color: @subtext1;
 	    }
 
       &.dcg-depressed {
-	      background-color:@subtext0
+	      background-color: @subtext0
 	    }
 	  }
   }
